# rag-ai-agent

./: .dockerignore  Dockerfile  README  agent.py  bm25_values.json  config.py  data_process.py  docker-compose.yml  ingest.py  main.py  pyproject.toml  rag_notebook_copy.ipynb  retriever.py  start.sh  ui.py
sample_documents/PDFs_parsed/: Philippines Flood Control Corruption (1)_da67da45-291e-4ae1-841c-309ab09cb03c.md
